# ImageEcho

./: .gitignore  CMakeLists.txt  README.md
include/: EchoContext.hpp  IechoEngine.hpp  ImageBuffer.hpp  ImageIO.hpp  PerturbationReport.hpp  SsimAnalyzer.hpp
include/engines/: DctEngine.hpp  FgsmEngine.hpp  LsbEngine.hpp  PgdEngine.hpp
src/: main.cpp
